[gd_scene load_steps=4 format=3 uid="uid://d4mbovl0xhgfo"]

[ext_resource type="Script" path="res://AI/Base/ai_controller.gd" id="1_617uw"]
[ext_resource type="Shape3D" uid="uid://dpvuqlxwkw00e" path="res://detection_shape.tres" id="2_krexa"]
[ext_resource type="Script" path="res://AI/Base/detection_area.gd" id="2_moyng"]

[node name="AIController" type="Node3D" groups=["Controller"]]
script = ExtResource("1_617uw")

[node name="NavAgent" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
debug_enabled = true

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 7
script = ExtResource("2_moyng")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = ExtResource("2_krexa")

[node name="Timers" type="Node" parent="."]

[node name="BackUpTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="PunchThinkTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="FireThinkTimer" type="Timer" parent="Timers"]

[connection signal="body_entered" from="DetectionArea" to="DetectionArea" method="_on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="DetectionArea" method="_on_body_exited"]
[connection signal="timeout" from="Timers/PunchThinkTimer" to="." method="_on_punch_think_timer_timeout"]
